Analisis semantico en declaraciones

--- a/Compiladores/nbproject/private/private.properties
+++ b/Compiladores/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/memotets89/.netbeans/11.1/build.properties
+user.properties.file=/home/odi/.netbeans/11.3/build.properties
